# 2023-nxp-hackthon

./: .gitignore  README.md
LCD_UI/: LCD_UI.guiguider
LCD_UI/custom/: custom.c  custom.h
LCD_UI/lib/arm/keil/: libopenh264.lib
LCD_UI/lvgl-simulator/: lv_conf.h
LCD_UI/sdk/Core/board/: lvgl_support.c  lvgl_support.h  pin_mux.c  pin_mux.h  sdmmc_config.c
LCD_UI/sdk/Core/component/gpio/: component_igpio_adapter.MIMXRT1062.cmake
LCD_UI/sdk/Core/component/lists/: component_lists.MIMXRT1062.cmake
LCD_UI/sdk/Core/component/osa/: component_osa_free_rtos.cmake  component_osa_interface.cmake
LCD_UI/sdk/Core/component/serial_manager/: component_serial_manager.MIMXRT1062.cmake  component_serial_manager_uart.MIMXRT1062.cmake
LCD_UI/sdk/Core/component/uart/: component_lpuart_adapter.MIMXRT1062.cmake
LCD_UI/sdk/Core/device/: device_MIMXRT1062_CMSIS.MIMXRT1062.cmake  device_MIMXRT1062_system.MIMXRT1062.cmake
LCD_UI/sdk/Core/doc/: readme.txt
LCD_UI/sdk/Core/drivers/: driver_cache_armv7_m7.MIMXRT1062.cmake  driver_clock.MIMXRT1062.cmake  driver_common.MIMXRT1062.cmake  driver_elcdif.MIMXRT1062.cmake  driver_igpio.MIMXRT1062.cmake  driver_iomuxc.MIMXRT1062.cmake  driver_lpi2c.MIMXRT1062.cmake  driver_lpuart.MIMXRT1062.cmake  driver_pxp.MIMXRT1062.cmake  driver_usdhc.MIMXRT1062.cmake
LCD_UI/sdk/Core/fatfs/: middleware_fatfs.cmake  middleware_fatfs_sd.cmake
LCD_UI/sdk/Core/freertos/freertos-kernel/: middleware_freertos-kernel_template.cmake
LCD_UI/sdk/Core/lvgl/: middleware_lvgl.cmake
LCD_UI/sdk/Core/openh264/: middleware_openh264_api.cmake  middleware_openh264_common.cmake  middleware_openh264_decoder.cmake
LCD_UI/sdk/Core/sdmmc/: middleware_sdmmc_common.cmake  middleware_sdmmc_host_usdhc.cmake  middleware_sdmmc_host_usdhc_cache.cmake  middleware_sdmmc_host_usdhc_freertos.cmake  middleware_sdmmc_osa_freertos.cmake  middleware_sdmmc_sd.cmake
LCD_UI/sdk/Core/source/: FreeRTOSConfig.h  ffconf.h  lv_conf.h  lvgl_guider.c
LCD_UI/sdk/Core/touchpanel/: driver_ft5406_rt.MIMXRT1062.cmake  driver_gt911.MIMXRT1062.cmake
LCD_UI/sdk/Core/utilities/: utilities_misc_utilities.MIMXRT1062.cmake  utility_assert.MIMXRT1062.cmake  utility_assert_lite.MIMXRT1062.cmake  utility_debug_console.MIMXRT1062.cmake  utility_debug_console_lite.MIMXRT1062.cmake
LCD_UI/sdk/Core/video/: driver_video-common.MIMXRT1062.cmake
LCD_UI/sdk/Core/xip/: driver_xip_board_evkbmimxrt1060.cmake  driver_xip_device.MIMXRT1062.cmake
LCD_UI/sdk/armgcc/: CMakeLists.txt  all_lib_device.cmake  config.cmake  flags.cmake
LCD_UI/sdk/armgcc/MIMXRT1062/gcc/: MIMXRT1062xxxxx_flexspi_nor_sdram.ld
LCD_UI/sdk/armgcc/startup/: device_MIMXRT1062_startup.MIMXRT1062.cmake
LCD_UI/sdk/iar/: lvgl_guider.ewd  lvgl_guider.ewp  lvgl_guider.eww  lvgl_guider_ewp.template
LCD_UI/sdk/iar/MIMXRT1062/iar/: MIMXRT1062xxxxx_flexspi_nor_sdram.icf
LCD_UI/sdk/iar/deployment/: lvgl_guider.flexspi_nor_sdram_release.driver.xcl  lvgl_guider.flexspi_nor_sdram_release.general.xcl
LCD_UI/sdk/mcuxpresso/: .cproject  .project  .project_template
LCD_UI/sdk/mdk/: lvgl_guider.uvoptx  lvgl_guider.uvprojx  lvgl_guider_uvprojx.template
LCD_UI/sdk/mdk/MIMXRT1062/arm/: MIMXRT1062xxxxx_flexspi_nor_sdram.scf
client/: .firebaserc  package-lock.json  package.json
client/.firebase/: hosting.YnVpbGQ.cache
client/public/: index.html
client/src/: App.js  index.js
client/src/components/CalendarView/: index.js
client/src/containers/: Header.js  LeftSidebar.js
client/src/features/common/: headerSlice.js
client/src/features/common/components/: NotificationBodyRightDrawer.js
client/src/features/dashboard/: index.js
client/src/features/dashboard/components/: AmountStats.js  BarChart.js  DoughnutChart.js  LineChart.js  UserChannels.js
client/src/features/leads/: index.js
client/src/features/settings/billing/: index.js
client/src/features/settings/profilesettings/: index.js
client/src/features/settings/team/: index.js
client/src/features/transactions/: index.js
client/src/features/user/: LandingIntro.js  Register.js
client/src/features/user/components/: TemplatePointers.js
client/src/pages/: Register.js
client/src/pages/protected/: 404.js  Bills.js  Blank.js  Leads.js  Team.js  Transactions.js  Welcome.js
client/src/routes/: index.js  sidebar.js
client/src/utils/: dummyData.js
flask-server/: main.py  server.py
